Перевёрстка header, защита от переполненияю

--- a/catalog.html
+++ b/catalog.html
@@ -16,17 +16,11 @@
         <div class="logo">
             <a href="index.html">Device</a>
         </div>
-        <div class="shop_navigation">
+     <div class="header_mode">
             <form action="#" method="get">
                 <input type="search" name="search" class="search" placeholder="Поиск по сайту">
                 <a href="#" class="btn_search">Найти</a>
             </form>
-            <div class="catalog_open">
-                  <a class="catalog_link">Каталог товаров</a>
-                  <label for="menu_show" title="Навигационное меню"></label>
-            </div>
-        </div>
-        <div class="buyer_menu">
             <div class="personal_mode">
                 <div class="login_logout">
                     <a href="#" class="personal_area">Валентин Петухов</a>
@@ -37,14 +31,20 @@
                     <a href="#" class="basket">Корзина</a>
                 </div>
             </div>
+      </div>
+      <div class="general_navigation">
+            <div class="catalog_open">
+                  <a class="catalog_link">Каталог товаров</a>
+                  <label for="menu_show" title="Навигационное меню"></label>
+            </div>
             <div class="about_us">
                 <div class="adv_links">
                     <a href="index.html #advantages">Доставка</a>
-                    <a href="index.html #advantages">Гарантии</a>
+                    <a href="index.html #advantages">Гарантия</a>
                 </div>
                 <a href="index.html #contacts">Контакты</a>
             </div>
-        </div>
+      </div>      
     </header>
     <nav class="catalog_menu">
         <ul class="catalog_list">
