--- a/index.html
+++ b/index.html
@@ -16,17 +16,12 @@
         <div class="logo">
             <a>Device</a>
         </div>
-        <div class="shop_navigation">
-            <form action="#" method="get">
+        <!-- переверстка header -->
+        <div class="header_mode">
+            <form action="#" method="get" class="search_form">
                 <input type="search" name="search" class="search" placeholder="Поиск по сайту">
                 <a href="#" class="btn_search">Найти</a>
             </form>
-            <div class="catalog_open">
-                <a href="catalog.html" class="catalog_link">Каталог товаров</a>
-                <label for="menu_show" title="Навигационное меню"></label>
-            </div>
-        </div>
-        <div class="buyer_menu">
             <div class="personal_mode">
                 <div class="login_logout">
                     <a href="#" class="login">Войти</a>
@@ -36,10 +31,16 @@
                     <a href="#" class="basket">Корзина</a>
                 </div>
             </div>
+        </div>
+        <div class="general_navigation">
+            <div class="catalog_open">
+                <a href="catalog.html" class="catalog_link">Каталог товаров</a>
+                <label for="menu_show" title="Навигационное меню"></label>
+            </div>
             <div class="about_us">
                 <div class="adv_links">
                     <a href="#advantages">Доставка</a>
-                    <a href="#advantages">Гарантии</a>
+                    <a href="#advantages">Гарантия</a>
                 </div>
                 <a href="#contacts">Контакты</a>
             </div>
